On mobile ensure the background image is 100%. It looks better.

--- a/partials/home.less
+++ b/partials/home.less
@@ -4,6 +4,7 @@
 	height: 100vh;
     background-image: url("http://res.cloudinary.com/www-drvaudio-com/image/upload/v1468307219/studio_g55jnz.png");
     background-size: 70%;
+    .mobile & { background-size: 100%; }
     background-position: center;
     background-repeat: no-repeat;
 
